// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > AppShell Matches snapshot when passed all props 1`] = `
<styled.div>
  <NavBar
    activeProduct="publish"
    helpMenuItems={null}
    user={null}
  />
  <Banner
    actionButton={
      Object {
        "action": [MockFunction],
        "label": "jest-auto-snapshots String Fixture",
      }
    }
    customHTML={null}
    text="jest-auto-snapshots String Fixture"
  />
  <styled.div>
    <styled.div>
      <NodeFixture />
    </styled.div>
    <styled.div>
      <NodeFixture />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AppShell Matches snapshot when passed only required props 1`] = `
<styled.div>
  <NavBar
    helpMenuItems={null}
  />
  <styled.div>
    <styled.div>
      <NodeFixture />
    </styled.div>
  </styled.div>
</styled.div>
`;
